dateset/sealer-main/build/kubefile/parser/test/brigade-github-app/brigade-github-app_templates_gateway-role_1.yaml
# Source: brigade-github-app/templates/gateway-role.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-release-brigade-github-app
  labels:
    app: my-release-brigade-github-app
    chart: "brigade-github-app-0.8.0"
    release: "my-release"
    heritage: "Helm"
