dateset/sealer-main/build/kubefile/parser/test/brigade-github-app/brigade-github-app_templates_gateway-role_3.yaml
# Source: brigade-github-app/templates/gateway-role.yaml
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: my-release-brigade-github-app
  labels:
    app: my-release-brigade-github-app
    chart: "brigade-github-app-0.8.0"
    release: "my-release"
    heritage: "Helm"
rules:
- apiGroups: [""]
  resources: ["secrets", "pods"]
  verbs: ["list", "watch", "get", "create"]
- apiGroups: [""]
  resources: ["*"]
  verbs: ["list", "watch"]
