dateset/sealer-main/build/kubefile/parser/test/brigade-github-app/gateway-role.yaml
# Source: brigade-github-app/templates/gateway-role.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-release-brigade-github-app
  labels:
    app: my-release-brigade-github-app
    chart: "brigade-github-app-0.8.0"
    release: "my-release"
    heritage: "Helm"

---
# Source: brigade-github-app/templates/gateway-role.yaml
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: my-release-brigade-github-app
  labels:
    app: my-release-brigade-github-app
    chart: "brigade-github-app-0.8.0"
    release: "my-release"
    heritage: "Helm"
rules:
- apiGroups: [""]
  resources: ["secrets", "pods"]
  verbs: ["list", "watch", "get", "create"]
- apiGroups: [""]
  resources: ["*"]
  verbs: ["list", "watch"]

---
# Source: brigade-github-app/templates/gateway-role.yaml
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: my-release-brigade-github-app
  labels:
    app: my-release-brigade-github-app
    chart: "brigade-github-app-0.8.0"
    release: "my-release"
    heritage: "Helm"
subjects:
- kind: ServiceAccount
  name: my-release-brigade-github-app
roleRef:
  kind: Role
  name: my-release-brigade-github-app
  apiGroup: rbac.authorization.k8s.io

---
# Source: brigade-github-app/templates/gateway-role.yaml
# Copyright © 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---

---
