dateset/sealer-main/build/kubefile/parser/test/brigade-github-app/ingress.yaml
# Source: brigade-github-app/templates/ingress.yaml
# Copyright © 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-brigade-github-app
  labels:
    app: brigade-github-app
    chart: brigade-github-app-0.8.0
    release: my-release
    heritage: Helm
  annotations:
      kubernetes.io/ingress.class: "nginx"
      kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: gh-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-brigade-github-app
                port:
                  number: 80
  tls:
    - hosts:
      - gh-app.example.com
      secretName: gh-app-tls
